--- a/app/src/main/res/layout/item_android.xml
+++ b/app/src/main/res/layout/item_android.xml
@@ -20,6 +20,7 @@
         android:layout_marginStart="16dp"
         android:textSize="25sp"
         android:layout_toEndOf="@+id/image"
+        android:id="@+id/title"
         tools:text="@tools:sample/full_names"/>
 
 </RelativeLayout>
